--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 /* ================= CONFIG ================= */
 // ❗ ใส่ค่าจริงจาก Supabase
 const sb = supabase.createClient(
-  "SUPABASE_URL",
-  "SUPABASE_ANON_KEY"
+  "https://nvsptbbvxjulrpdebrhn.supabase.co",
+  "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im52c3B0YmJ2eGp1bHJwZGVicmhuIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc2MTc1NTAsImV4cCI6MjA4MzE5MzU1MH0.sQ8XqdAKCsaxWupP3QZjFOraEHyW8agSo3c3BR3I8ss"
 )
 
 /* ================= STATE ================= */
